// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-announce-beta #render should render component as expected (1) 1`] = `
<gux-announce-beta aria-live="polite">
  <template shadowrootmode="open">
    <slot></slot>
    <div></div>
  </template>
  This is some text to read
</gux-announce-beta>
`;

exports[`gux-announce-beta #render should render component as expected (2) 1`] = `
<gux-announce-beta aria-live="assertive" politeness="assertive">
  <template shadowrootmode="open">
    <slot></slot>
    <div></div>
  </template>
  This is some text to read
</gux-announce-beta>
`;

exports[`gux-announce-beta #render should render component as expected (3) 1`] = `
<gux-announce-beta aria-live="off" politeness="off">
  <template shadowrootmode="open">
    <slot></slot>
    <div></div>
  </template>
  This is some text to read
</gux-announce-beta>
`;

exports[`gux-announce-beta #render should render component as expected (4) 1`] = `
<gux-announce-beta aria-live="polite" politeness="polite">
  <template shadowrootmode="open">
    <slot></slot>
    <div></div>
  </template>
  This is some text to read
</gux-announce-beta>
`;
